[gd_scene load_steps=2 format=3 uid="uid://qp51pqptymgt"]

[ext_resource type="Script" uid="uid://dqxquks5d7jwh" path="res://scripts/ShopUI.gd" id="1_0fuhb"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_0fuhb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = -1.0
offset_right = 489.0
offset_bottom = 488.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Shop"

[node name="GoldLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="OptionsContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RefreshButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Refresh options"

[node name="StatusLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="PurchasesButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Show Purchases"
